tests/negative/test_data_glob_not_def_init.orb
data Foo;

let Foo f;

fnc main() {
}